--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "contact-us/Module": [
+        "apps/pages/contact-us/src/app/remote-entry/entry.module.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
