--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "auth/Module": [
+        "apps/pages/auth/auth/src/app/remote-entry/entry.module.ts"
+      ],
       "contact-us/Module": [
         "apps/pages/contact-us/src/app/remote-entry/entry.module.ts"
       ]
