--- a/apps/pages/shop/shop/tsconfig.json
+++ b/apps/pages/shop/shop/tsconfig.json
@@ -11,9 +11,10 @@
   },
   "files": [],
   "include": [],
+  "composite": true,
   "references": [
     {
-      "path": "./tsconfig.editor.json"
+      "path": "./tsconfig.editor.json",
     },
     {
       "path": "./tsconfig.app.json"
