--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,6 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
 
       # - run: npx nx-cloud record -- nx format:check
+      - run: apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb
       - run: npx nx affected -t lint build e2e-ci
       # - run: npx nx affected -t lint test build e2e-ci
